--- a/config/database.yml
+++ b/config/database.yml
@@ -7,18 +7,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: postgres
-  password: password
+  host: <%= ENV['DATABASE_HOST'] || 'db' %>
+  username: <%= ENV['DATABASE_USERNAME'] || 'postgres' %>
+  password: <%= ENV['DATABASE_PASSWORD'] || 'password' %>
+  port: <%= ENV['DATABASE_PORT'] || 5432 %>
   pool: 5
 
 development:
   <<: *default
-  host: <%= ENV['DATABASE_HOST'] || 'db' %>
-  username: <%= ENV['DATABASE_USERNAME'] || 'postgres' %>
-  password: <%= ENV['DATABASE_PASSWORD'] || 'password' %>
-  database: development
-  port: 3306
+  database: <%= ENV['DATABASE'] || 'development' %>
 
 test:
   <<: *default
