--- a/cdk-sample/package.json
+++ b/cdk-sample/package.json
@@ -27,6 +27,7 @@
     "@aws-cdk/aws-ecs-patterns": "^1.45.0",
     "@aws-cdk/aws-rds": "^1.45.0",
     "@aws-cdk/aws-secretsmanager": "^1.45.0",
+    "@aws-cdk/aws-ssm": "^1.45.0",
     "@aws-cdk/core": "1.45.0",
     "source-map-support": "^0.5.16"
   }
